# ml-api-router-db

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  start_db.sh
postgres_init/: init.sql
src/: database.py  db_reader.py  db_writer.py  example.py  models.py
tests/: conftest.py  test_postgres_meta.py  test_redis_routes.py
