[project]
name = "mlapi-router-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "redis>=7.2.0",
]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
